--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "browserify -t [ babelify --presets [ react ] ] app/js/main.js -o build/app.js",
-    "watch": "watchify -t [ babelify --presets [ react ] ] app/js/main.js -o build/app.js -v"
+    "start": "node-debug server/server.js",
+    "build": "browserify -t [ babelify --presets [ react ] ] app/js/main.js -o app/build/app.js",
+    "watch": "watchify -t [ babelify --presets [ react ] ] app/js/main.js -o app/build/app.js -v"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,10 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "fs-extra": "^0.30.0",
     "jquery": "^3.1.1",
     "react": "^15.3.0",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.0",
     "watchify": "^3.7.0"
   }
