--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node-debug server/server.js",
+    "start": "node server/server.js",
     "build": "browserify -t [ babelify --presets [ react ] ] app/js/main.js -o app/build/app.js",
     "watch": "watchify -t [ babelify --presets [ react ] ] app/js/main.js -o app/build/app.js -v"
   },
