--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/TifPun/opsDashboard-bundle-api-with-extensions#readme",
   "dependencies": {
+    "archiver": "^1.1.0",
     "babel-preset-react": "^6.16.0",
     "babel-standalone": "^6.15.0",
     "babelify": "^7.3.0",
