--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^15.3.0",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.0",
+    "socket.io": "^1.5.0",
     "watchify": "^3.7.0"
   }
 }
