--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "react-dom": "^15.3.0",
     "socket.io": "^1.5.0",
     "watchify": "^3.7.0"
+  },
+  "engines": {
+    "node": "6.4.0"
   }
 }
