--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "browserify -t [ babelify --presets [ react ] ] app/js/main.js -o app/build/app.js",
     "start": "node server/server.js",
     "startDebug": "node --inspect server/server.js",
     "build": "browserify -t [ babelify --presets [ react ] ] app/js/main.js -o app/build/app.js",
