--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-standalone": "^6.15.0",
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
+    "container": "0.0.2",
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
     "jquery": "^3.1.1",
